--- a/Basic JavaScript Projects/Basic_HTML_2.html
+++ b/Basic JavaScript Projects/Basic_HTML_2.html
@@ -9,8 +9,10 @@
         </button>
         <p id="demo"></p>
 
-        <p id="Concatenate" onclick ="myFunction()">
+        <p id="Concatenate" onclick ="myFunction_1()">
         How much are you learning?</p>
         
+        <p id="Hello World"> Click to change the text in this paragraph.</p>
+        <button onclick="myFunction()">Try it</button>
     </body>
 </html>
